--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Debopam Bhattacharjee</title>
-    <link 
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap" 
+    <title></title>
+    <!-- <link 
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" 
       rel="stylesheet"
-    > 
-    <link rel="stylesheet" href="styles.css" />
+    >  -->
     <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
