--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" 
       rel="stylesheet"
     >  -->
-    <link rel="stylesheet" href="bootstrap.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <div id="root"></div>
     <script src="../src/index.js" type="text/jsx"></script>
+    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </body>
 </html>
