--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Debopam is a computer science researcher working on satellite networks, Internet architecture, and network latency. He is currently at ETH Zürich, Switzerland.">
-    <meta name="keywords" content="debopam, debopam bhattacherjee, debopam bhattacharya, computer science, ETH Zürich, systems, networks, computer networks, Internet, Internet architecture, latency, low latency, communications, LEO, low earth orbit, satellite, LEO satellite, satellite broadband">
+    <meta name="description" content="Debopam Bhattacherjee is a computer scientist working on AI Systems, Networked Systems, Low-Earth Orbit Satellite Networks, and Sustainability. He works as a Senior Researcher at Microsoft Research India.">
+    <meta name="keywords" content="debopam, debopam bhattacherjee, debopam bhattacharya, computer science, MSR, Microsoft Research, Microsoft Research India, AI, AI systems, ETH Zürich, systems, networks, computer networks, Internet, Internet architecture, latency, low latency, communications, LEO, low earth orbit, satellite, LEO satellite, satellite broadband">
     <meta name="author" content="Debopam Bhattacherjee">
   </head>
 
